initial commit for release/2.x.x

--- a/templates/l2vpn_evpn_global.j2
+++ b/templates/l2vpn_evpn_global.j2
@@ -20,4 +20,4 @@ l2vpn evpn
     {# configure default-gateway advertise #}
     {% if l2vpn_global.default_gw is defined %}
         default-gateway advertise
-    {% endif %}}
+    {% endif %}
