--- a/templates/evi_vni_vlan_stiching.j2
+++ b/templates/evi_vni_vlan_stiching.j2
@@ -4,23 +4,25 @@ If action is not set in the configurations, it is "add" by default.
 #}
 
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
+{% if vlans is defined %}
+    ! EVI-VNI-VLAN stiching block
+    {% for ivlan,idata in vlans.items() %}
+        !
+        vlan configuration {{ ivlan }}
 
-{% for ivlan,idata in vlans.items() %}
-    !
-    vlan configuration {{ ivlan }}
-    
-    {# Checking an action for vlan - action_stitching #}
-    {% set action = vlans[ivlan].action_stitching | default ('add') %}
-    {% if action == 'delete' %}
-        {% set prefix = 'no' %}
-    {% else %}
-        {% set prefix = '' %}
-    {% endif %}
+        {# Checking an action for vlan - action_stitching #}
+        {% set action = vlans[ivlan].action_stitching | default ('add') %}
+        {% if action == 'delete' %}
+            {% set prefix = 'no' %}
+        {% else %}
+            {% set prefix = '' %}
+        {% endif %}
 
-    {# vlan configuration for l2 or l3 VNI #}
-    {% if idata.vlan_type == 'access' %}
-        {{prefix}} member evpn-instance {{idata.evi}} vni {{idata.vni}}
-    {% elif idata.vlan_type == 'core' %}
-        {{prefix}} member vni {{idata.vni}}
-    {% endif %} 
-{% endfor %}
+        {# vlan configuration for l2 or l3 VNI #}
+        {% if idata.vlan_type == 'access' %}
+            {{prefix}} member evpn-instance {{idata.evi}} vni {{idata.vni}}
+        {% elif idata.vlan_type == 'core' %}
+            {{prefix}} member vni {{idata.vni}}
+        {% endif %} 
+    {% endfor %}
+{% endif %}
