--- a/templates/nve_create.j2
+++ b/templates/nve_create.j2
@@ -13,7 +13,7 @@ Immutable paramiters:
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
 {% if nve_interfaces is defined %}
-
+    ! NVE interface block
     {% for interface in nve_interfaces %}
         !
         interface nve{{ interface }}
