--- a/templates/overlay_interfaces.j2
+++ b/templates/overlay_interfaces.j2
@@ -5,6 +5,7 @@ This module configures overlay interfaces
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
 {% if overlay_interfaces is defined %}
+    ! Overlay interface block
     {% for intf in overlay_interfaces %}
         {# Checking an action for the vlan - action_vlan. #}
         {% set action = overlay_interfaces[intf].action | default ('add') %}
