--- a/templates/pim_rp.j2
+++ b/templates/pim_rp.j2
@@ -4,6 +4,9 @@ This module configures RP for the global routing table
 
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
-{% if pim.rp_address is defined %}
-    ip pim rp-address {{pim.rp_address}}
+{% if pim is defined %}
+! PIM RP block
+    {% if pim.rp_address is defined %}
+        ip pim rp-address {{pim.rp_address}}
+    {% endif %}
 {% endif %}
