--- a/templates/bgp_l2vpn_ipv46_per_vrf.j2
+++ b/templates/bgp_l2vpn_ipv46_per_vrf.j2
@@ -7,6 +7,7 @@ If action is not set in the configurations, it is "add" by default.
 
 {# Configure BGP AF for VRF #}
 {% if vrfs is defined %}
+    ! BGP per VRF block
     !
     router bgp {{ bgp.as_number }}
     {% for vrf in vrfs %}
