--- a/templates/hostname.j2
+++ b/templates/hostname.j2
@@ -5,5 +5,6 @@ This module is configuring hostname for a swith
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
 {% if hostname is defined %}
+    ! Hostname block
     hostname {{ hostname }}
 {% endif %}
