--- a/templates/l2vpn_evpn_global.j2
+++ b/templates/l2vpn_evpn_global.j2
@@ -4,21 +4,24 @@ This module configures global l2vpn evpn definition.
 
 #jinja2: lstrip_blocks: "True", trim_blocks: "True"
 
-{# global l2vpn evpn definition#}
-!
-l2vpn evpn
+{% if l2vpn_global is defined %}
+    ! L2VPN global block
+    {# global l2vpn evpn definition#}
+    !
+    l2vpn evpn
 
-{# configure default replication type #}
-{% if l2vpn_global.replication_type is defined %}
-    replication-type {{ l2vpn_global.replication_type }}
-{% endif %}
+    {# configure default replication type #}
+    {% if l2vpn_global.replication_type is defined %}
+        replication-type {{ l2vpn_global.replication_type }}
+    {% endif %}
 
-{# configure router-id #}
-{% if l2vpn_global.router_id is defined %}
-    router-id {{ l2vpn_global.router_id }}
-{% endif %}
+    {# configure router-id #}
+    {% if l2vpn_global.router_id is defined %}
+        router-id {{ l2vpn_global.router_id }}
+    {% endif %}
 
-{# configure default-gateway advertise #}
-{% if l2vpn_global.default_gw is defined and l2vpn_global.default_gw == "yes"%}
-    default-gateway advertise
+    {# configure default-gateway advertise #}
+    {% if l2vpn_global.default_gw is defined and l2vpn_global.default_gw == "yes"%}
+        default-gateway advertise
+    {% endif %}
 {% endif %}
