--- a/templates/ospf_interfaces.j2
+++ b/templates/ospf_interfaces.j2
@@ -7,7 +7,7 @@ Default OSPF network type in underlay is P2P for speeding up the convergence tim
 
 {# check if OSPF process is defined in the config for the Leaf/Spine #}
 {% if ospf is defined %}
-
+    ! OSPF interface block
     {% set process_id = ospf.process_id | default ('1') %}
     {# configure ospf under interface and set ospf interface P2P if not loopback #}
     {% for interface in interfaces%}
@@ -21,6 +21,6 @@ Default OSPF network type in underlay is P2P for speeding up the convergence tim
 
     {# configure ospf process and ospf router-id #}
     !
-    router ospf {{ ospf.process_id }}
+    router ospf {{ process_id }}
         router-id {{ ospf.router_id }}
 {% endif %}
