--- a/templates/dhcp_overlay.j2
+++ b/templates/dhcp_overlay.j2
@@ -15,6 +15,8 @@ vrfs:
 
 
 {% set action = action | default ('add')%}
+! DHCP block
+!
 {% if action == 'add' %}
     {# processing global parameters #}
     {# option_82 #}
